--- a/styles.css
+++ b/styles.css
@@ -2178,6 +2178,10 @@ body[data-ntb-csstheme="Cupertino"] button.cg-note-toolbar-fab {
             .is-phone & {
                 padding-bottom: var(--cg-nt-tbar-bottom-padding-bottom-phone);
             }
+            /* fix: bottom padding needs to be removed when keyboard is open on phone */
+            .is-phone.mod-toolbar-open & {
+                padding-bottom: unset;
+            }
         }
     }
 
